fix: fixed outline ring offset color in dark mode

--- a/src/assets/utilities.css
+++ b/src/assets/utilities.css
@@ -8,7 +8,7 @@
 		@apply bg-squares-gradient square-light-white square-dark-neutral-300 square-size-[6px];
 	}
 	.focus-outline {
-		@apply outlined:outline-none outlined:ring-2 outlined:ring-accent-500 outlined:ring-offset-2 dark:ring-offset-fg dark-outlined:ring-offset-bg; 
+		@apply outlined:outline-none outlined:ring-2 outlined:ring-accent-500 outlined:ring-offset-2 dark:ring-offset-fg; 
 	}
 	.focus-outline-no-offset {
 		@apply outlined:outline-none outlined:ring-2 outlined:ring-accent-500;
